fix position on firefox

--- a/imports/ui/pages/UserProfile/UserProfile.scss
+++ b/imports/ui/pages/UserProfile/UserProfile.scss
@@ -19,6 +19,7 @@
                 top: 35px;
 
                 .upload-container {
+                    bottom: 0;
                     position: absolute;
 
                     button {
